# personal_fast_zero

./: .gitignore  database.db  pyproject.toml
fastapi_zero/: app.py  settings.py
migrations/: env.py
migrations/versions/: afcb719adcd1_create_users_table.py
tests/: test_app.py  test_db.py
